--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 
 Revision history for Log-Any-Adapter-DERIV
 {{$NEXT}}
+    - fix failure under new Future v0.49
 
 0.002   2021-10-28 05:30:00+00:00 UTC
     pod improvement
