--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
 Revision history for Log-Any-Adapter-DERIV
 {{$NEXT}}
 
+    - Added slack bot token pattern for masking
     - fixing of one sensitive regex pattern for log message masking
 
 0.007     2024-03-15 07:29:29+00:00 UTC
